[package]
name = "lol_stats_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
dotenv = "0.15.0"
tokio = { version = "1.21.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
